bug fix btn chat + select on ios

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -81,6 +81,8 @@
     margin: auto;
     border: none;
     padding: 10px 30px;
+    box-shadow: 0 2px 10px lightgrey;
+    background-color: white;
   }
   .btn-window-home {
     background-color: #00D3FE;
